--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@emailjs/browser": "^4.3.3",
     "@react-three/drei": "^9.102.3",
     "@react-three/fiber": "^8.15.19",
+    "autoprefixer": "^9.8.6",
     "framer-motion": "^11.0.12",
     "maath": "^0.10.7",
+    "postcss": "^8.4.36",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-scripts": "^5.0.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0"
   },
